# hello-holo

./: ReadMe.md
card-classic/: Dockerfile  db.js  docker-compose.yml  package.json  server.js
card-classic/public/: app.js  index.html
card-holochain/: .gitignore  Cargo.toml  docker-compose.yml
card-holochain/bridge/: Dockerfile  package.json  server.js
card-holochain/dnas/contacts/workdir/: dna.yaml
card-holochain/dnas/contacts/zomes/coordinator/contacts/: Cargo.toml
card-holochain/dnas/contacts/zomes/coordinator/contacts/src/: lib.rs
card-holochain/dnas/contacts/zomes/integrity/contacts_integrity/: Cargo.toml
card-holochain/dnas/contacts/zomes/integrity/contacts_integrity/src/: lib.rs
card-holochain/ui/: app.js  index.html  style.css
card-holochain/workdir/: happ.yaml
exigences/: exigences.md
