[workspace]
members = [
  "dnas/contacts/zomes/integrity/contacts_integrity",
  "dnas/contacts/zomes/coordinator/contacts",
]
resolver = "2"

[workspace.dependencies]
hdi = { git = "https://github.com/holochain/holochain", tag = "holochain-0.6.1-rc.3" }
hdk = { git = "https://github.com/holochain/holochain", tag = "holochain-0.6.1-rc.3" }
serde = { version = "1", features = ["derive"] }
holochain_serialized_bytes = "0.0.56"
